fixed items alignment and overflow issue

--- a/src/components/Home/css/section-two.css
+++ b/src/components/Home/css/section-two.css
@@ -3,6 +3,10 @@
   padding: 0;
 }
 
+body{
+  overflow-x: hidden;
+}
+
 .section-two {
   width: 100%;
   display: flex;
