--- a/src/pages/css/Market.css
+++ b/src/pages/css/Market.css
@@ -9,13 +9,15 @@
 }
 
 .item {
-  width: 11.7vw;
+  width: 18%;
+  height: 25vh;
   float: left;
-  margin: 1vw;
+  margin: 1%;
 }
 
 .cont {
   width: 100%;
+  height: auto;
 }
 
 p{
